change loader background

--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,9 @@
 <body>
 
 
+<script src="./assets/app-loader/app-loader.js"></script>
+<!--
 <ansyn-root>
-	<script src="./assets/app-loader/app-loader.js"></script>
-</ansyn-root>
+</ansyn-root>-->
 </body>
 </html>
