--- a/src/index.html
+++ b/src/index.html
@@ -12,9 +12,8 @@
 <body>
 
 
-<script src="./assets/app-loader/app-loader.js"></script>
-<!--
 <ansyn-root>
-</ansyn-root>-->
+	<script src="./assets/app-loader/app-loader.js"></script>
+</ansyn-root>
 </body>
 </html>
